# rtal-plugin-suite

./: .gitignore  BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
plugins/rtal-In_Bloom/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-In_Bloom/scripts/: export.sh  install.sh  package.sh
plugins/rtal-In_Bloom/src/: rtal_in_bloom.dsp
plugins/rtal-In_Bloom/supercollider/: rtal_in_bloom.scd
plugins/rtal-crystal-pluck/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-crystal-pluck/scripts/: export.sh  install.sh  package.sh
plugins/rtal-crystal-pluck/src/: rtal_crystal_pluck.dsp
plugins/rtal-crystal-pluck/supercollider/: rtal_crystal_pluck.scd
plugins/rtal-dreams-of-electric-cabinets/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-dreams-of-electric-cabinets/scripts/: export.sh  install.sh  package.sh
plugins/rtal-dreams-of-electric-cabinets/src/: rtal_dreams_of_electric_cabinets.dsp
plugins/rtal-dreams-of-electric-cabinets/supercollider/: rtal_dreams_of_electric_cabinets.scd
plugins/rtal-dynamic-distortion/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-dynamic-distortion/scripts/: export.sh  install.sh  package.sh
plugins/rtal-dynamic-distortion/src/: rtal_dynamic_distortion.dsp
plugins/rtal-dynamic-distortion/supercollider/: rtal_dynamic_distortion.scd
plugins/rtal-guitar-shadow/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
plugins/rtal-guitar-shadow/scripts/: export.sh  install.sh  package.sh
plugins/rtal-guitar-shadow/src/: rtal_guitar_shadow.dsp
plugins/rtal-guitar-shadow/supercollider/: GuitarShadowPrototype.scd
plugins/rtal-live-forever/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-live-forever/scripts/: export.sh  install.sh  package.sh
plugins/rtal-live-forever/src/: rtal_live_forever.dsp
plugins/rtal-live-forever/supercollider/: rtal_live_forever.scd
plugins/rtal-mestophelies/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-mestophelies/scripts/: export.sh  install.sh  package.sh
plugins/rtal-mestophelies/src/: rtal_mestophelies.dsp
plugins/rtal-mestophelies/supercollider/: rtal_mestophelies.scd
plugins/rtal-shite_amp/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  LICENSE  README.md
plugins/rtal-shite_amp/scripts/: export.sh  install.sh  license_audit.sh  package.sh
plugins/rtal-shite_amp/src/: rtal_shite_amp.dsp
plugins/rtal-shite_amp/supercollider/: rtal_shite_amp.scd
plugins/rtal-silkcut-choir/: BINARY_LICENSE_NOTICE.txt  CMakeLists.txt  README.md
plugins/rtal-silkcut-choir/scripts/: export.sh  install.sh  package.sh
plugins/rtal-silkcut-choir/src/: rtal_silkcut_choir.dsp
plugins/rtal-silkcut-choir/supercollider/: rtal_silkcut_choir.scd
scripts/: package-suite.sh
